# dada-pt-br

./: .dockerignore  .flake8  .gitignore  8  Dockerfile  Dockerfile.gpu  README.md  TODO.md  analyser.py  docker-compose.yml  downloader.py  evaluator.py  llm_client.py  main.py  merger.py  pyproject.toml  report_generator.py  requirements.txt  sample_tasks.json  translator.py  utils.py
agentic_safety/: README.md  __init__.py  requirements.txt
agentic_safety/core/: __init__.py  agent.py  memory.py  planner.py  tools.py
agentic_safety/evaluation/: __init__.py  metrics.py  safety_evaluator.py
agentic_safety/examples/: basic_usage.py
agentic_safety/prompts/: __init__.py  evaluation_prompts.py  safety_prompts.py  task_prompts.py
config/: datasets.py  logging.py
data/info/: evaluation_report.json  translation_report.json
final-data/info/: evaluation_report_gemma.json  evaluation_report_tower.json  translation_summary_gemma.txt
legacy/reports/: evaluation_summary_gemma.txt  evaluation_summary_tower.txt
prompts/: translation_safety.md
src/dadaptbr/: __init__.py  agentic_cli.py  analyser.py  analyzer.py  comparison_analyzer.py  downloader.py  evaluator.py  llm_client.py  main.py  merger.py  metadata_utils.py  report_generator.py  reviewer.py  single_analyzer.py  translator.py  utils.py
src/dadaptbr/config/: datasets.py  logging.py
src/dadaptbr/prompts/: cultural_review.md  review.md  translation.md  translation_json.md  translation_multilingual.md  translation_single.md  translation_tower.md
